syntax = "proto3";

import "certificates.proto";
option go_package = "github.com/alphabill-org/alphabill/internal/network/protocol/certification;certification";

message BlockCertificationRequest {
  bytes system_identifier = 1;
  string node_identifier = 2;
  InputRecord input_record = 3;
  bytes signature = 4;
}
